--- a/scss/Helper/_variables.scss
+++ b/scss/Helper/_variables.scss
@@ -2,7 +2,7 @@
 // Color
 $primaryPink: #b61984;
 $secondaryPink: #aa017e;
-$primaryWhite: #fff;
+$primaryWhite: #ffffff;
 $primaryBlack: #000000;
 $shadowColor: rgba(204, 204, 204, 0.5);
 $borderColor: rgba(0,0,0,0.1);
