--- a/scss/Helper/_mixin.scss
+++ b/scss/Helper/_mixin.scss
@@ -2,7 +2,8 @@
 
 
 @mixin buttonPinkStyle($pd-x, $pd-y) {
-    background-color: $primaryPink;
+    background-color: $primaryWhite;
+    box-shadow: inset 0px 0px 0px 30px $primaryPink;
     border: 1px solid $primaryPink;
     border-radius: 50px;
     color: $primaryWhite;
@@ -11,10 +12,9 @@
 }
 
 @mixin buttonPinkHover {
-    background-color: transparent;
     border: 1px solid $primaryPink;
     color: $primaryPink;
-    
+    box-shadow: inset 0px 0px 0px 0px $primaryPink;
 }
 
 @mixin inputForm() {
@@ -25,10 +25,7 @@
     &:focus-within{
         border: 1px solid rgba($color: #000000, $alpha: 0.3);
         input, textarea{
-           
             outline: none;
-        
-      
         }
     }
     input, textarea{
