--- a/scss/Layouts/_header.scss
+++ b/scss/Layouts/_header.scss
@@ -24,11 +24,18 @@ header{
     display: flex;
     gap: 15px;
     justify-items: center;
+    a{
+        color: inherit;
+        transition: all 0.2s;
+        &:hover{
+            color: $primaryPink;
+        }
+    }
 }
 
 
 
-.headerIconLink{
+
     #phoneCall{
         min-width: 208px;
         font-family: 'Montserrat', sans-serif;
@@ -42,15 +49,9 @@ header{
             }
         }
     }
-    a{
-        color: inherit;
-        transition: all 0.2s;
-        &:hover{
-            color: $primaryPink;
-        }
-    }
+    
   
-}
+
 
 #navbarSupportedContent{
     ul{
@@ -73,6 +74,7 @@ header{
                     border-radius: 50%;
                     transition: all 0.5s;
                     transform: translateX(-50%) scale(0);
+                    z-index: 8;
                 }
             }
             .nav-link.active{
@@ -99,6 +101,7 @@ header{
 
         
         .subMenu{
+            background-color: $primaryWhite;
             position: absolute;
             flex-direction: column;
             list-style: none;
@@ -112,7 +115,6 @@ header{
             opacity: 0;
             visibility: hidden;
             transform: scaleX(0.9) scaleY(0.9);
-            // z-index: 0;
             a{
                 text-decoration: none;
                 font-family: 'Montserrat', sans-serif;
